--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:scaleType="fitXY"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/bgd"
-        android:alpha=".40"/>
+        android:src="@drawable/bg_image"
+        android:alpha=".20"/>
 
     <LinearLayout
         android:gravity="center"
@@ -21,7 +21,7 @@
         android:layout_height="match_parent">
 
     <TextView
-        android:text="@string/app_name"
+        android:text="@string/title_activity_navigation"
         android:gravity="center"
         android:textColor="#000"
         android:textStyle="bold"
