--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -9,9 +9,9 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:alpha=".40"
+        android:alpha=".20"
         android:scaleType="fitXY"
-        android:src="@drawable/bgd" />
+        android:src="@drawable/bg_image" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.15"
+            android:layout_weight="0.10"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
-                android:text="@string/app_name"
+                android:text="@string/title_activity_navigation"
                 android:typeface="monospace"
                 android:textColor="#000"
                 android:textSize="25dp"
@@ -119,7 +119,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.85"
+            android:layout_weight="0.90"
             android:orientation="vertical">
 
             <LinearLayout
