--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="300dp"
+    android:layout_height="400dp"
     android:padding="15dp"
     android:background="#ffffffff">
 
+
+
     <EditText
-        android:background="@drawable/bt_background"
+        android:background="@drawable/comment_bg"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="160dp"
         android:id="@+id/text_dialog"
         android:textSize="13dp"
         android:hint="Write your Comment Here"
@@ -31,5 +33,7 @@
         android:layout_below="@+id/text_dialog"
         android:layout_centerHorizontal="true"
         android:textColor="#ffffffff" />
+
+
 
 </RelativeLayout>
