--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#7481D5</color>
     <color name="colorPrimaryDark">#000</color>
     <color name="colorAccent">#000</color>
+
+    <color name="colorNavHedder">#5D669C</color>
+    <color name="colorTextHedder">#0E23AD</color>
+
+
 </resources>
