--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -24,7 +24,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorNavHedder"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:layout_weight="0.2"
+            android:layout_weight="0.3"
             />
 
         <ImageView
@@ -34,7 +34,33 @@
             android:background="@color/colorNavHedder"
             android:layout_gravity="center"
             android:layout_weight="0.8"
+            android:visibility="gone"
             />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="1"
+            android:layout_weight="0.7"
+           android:visibility="gone"
+            >
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_add_circle_outline_black_24dp"
+                android:background="@color/colorNavHedder"
+                android:layout_gravity="center"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Create Activity"
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                />
+        </LinearLayout>
         </LinearLayout>
     </android.support.design.widget.AppBarLayout>
 
