--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -511,8 +511,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="2.5dp"
+                android:layout_marginRight="1dp"
                 android:layout_weight="0.5"
+                android:background="@drawable/card_right_radius"
                >
 
                 <Button
@@ -522,16 +523,17 @@
                     android:textAllCaps="false"
                     android:background="@drawable/card_radius"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="40dp" />
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:layout_marginLeft="2.5dp"
+                android:layout_marginLeft="1dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="0.5"
+                android:background="@drawable/card_right_radius"
                >
 
                 <Button
@@ -541,7 +543,7 @@
                     android:textAllCaps="false"
                     android:background="@drawable/card_right_radius"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="40dp" />
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
