--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,10 @@
     <item name="android:textSize">10dp</item>
     </style>
 
+    <style name="RatingBar"
+        parent="android:style/Widget.Material.RatingBar.Small">
+        <item name="colorControlNormal">@color/colorRating</item>
+        <item name="colorControlActivated">@color/colorRating</item>
+    </style>
+
 </resources>
