--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -115,31 +115,53 @@
 
         </LinearLayout>
 
+        <!--<LinearLayout-->
+            <!--android:gravity="center"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="0.90"-->
+            <!--android:orientation="vertical">-->
+
+            <!--<LinearLayout-->
+                <!--android:orientation="horizontal"-->
+                <!--android:background="#000"-->
+                <!--android:layout_marginBottom="10dp"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="2dp">-->
+
+            <!--</LinearLayout>-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/sign"-->
+                <!--android:text="Sign In"-->
+                <!--android:textColor="#000"-->
+                <!--android:gravity="center"-->
+                <!--android:textSize="22dp"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content" />-->
+
+        <!--</LinearLayout>-->
+
         <LinearLayout
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.90"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:background="#000"
-                android:layout_marginBottom="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="2dp">
-
-            </LinearLayout>
-
-            <TextView
+            <Button
                 android:id="@+id/sign"
-                android:text="Sign In"
-                android:textColor="#000"
-                android:gravity="center"
-                android:textSize="22dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/bgcolor"
+                android:text="Sign In"
+                android:textAllCaps="false"
+                android:textColor="#fff" />
         </LinearLayout>
+
     </LinearLayout>
 </RelativeLayout>
