--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -52,19 +52,6 @@
             android:weightSum="1"
             >
 
-
-            <!--<android.support.design.widget.BottomNavigationView-->
-            <!--android:layout_weight="0.50"-->
-            <!--app:theme="@style/NavigationDrawerStyle"-->
-            <!--android:layout_gravity="bottom"-->
-            <!--android:id="@+id/navigationView"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="?android:attr/windowBackground"-->
-            <!--app:itemBackground="@color/colorNavHedder"-->
-            <!--app:itemIconTint="#fff"-->
-            <!--app:itemTextColor="#fff"-->
-            <!--app:menu="@menu/navigation1"/>-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -75,14 +62,8 @@
 
                 >
 
-                <!--<android.support.v7.widget.CardView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="0.33"-->
-                <!--android:layout_margin="5dp"-->
-                <!--android:padding="5dp"-->
-                <!--&gt;-->
                 <LinearLayout
+                    android:id="@+id/fav_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -105,16 +86,8 @@
                         />
                 </LinearLayout>
 
-                <!--</android.support.v7.widget.CardView>-->
-
-                <!--<android.support.v7.widget.CardView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="0.33"-->
-                <!--android:layout_margin="5dp"-->
-                <!--android:padding="5dp"-->
-                <!--&gt;-->
                 <LinearLayout
+                    android:id="@+id/add_event"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -137,15 +110,8 @@
                         />
                 </LinearLayout>
 
-                <!--</android.support.v7.widget.CardView>-->
-                <!--<android.support.v7.widget.CardView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="0.33"-->
-                <!--android:layout_margin="5dp"-->
-                <!--android:padding="5dp"-->
-                <!--&gt;-->
                 <LinearLayout
+                    android:id="@+id/provile_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -168,7 +134,6 @@
                         />
                 </LinearLayout>
 
-                <!--</android.support.v7.widget.CardView>-->
 
             </LinearLayout>
 
@@ -181,6 +146,7 @@
                 android:weightSum="1"
                 >
                 <android.support.v7.widget.CardView
+                    android:id="@+id/m_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
@@ -201,6 +167,7 @@
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
+                    android:id="@+id/l_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
