--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         app:showAsAction="ifRoom"
-        android:id="@+id/action_settings"
+        android:id="@+id/action_search"
         android:icon="@drawable/search_icon"
         android:title="@string/action_settings" />
 
@@ -14,22 +14,6 @@
         android:title="share" />
 
 
-    <item
-        android:visible="false"
-        android:id="@+id/navigation_add_fav"
-        android:icon="@drawable/favorite_icon"
-        android:title="Add Fav"/>
 
-    <item
-        android:visible="false"
-        android:id="@+id/navigation_add_event"
-        android:icon="@drawable/add_people"
-        android:title="Add Event"/>
-
-    <item
-        android:visible="false"
-        android:id="@+id/navigation_profile"
-        android:icon="@drawable/profile_icon"
-        android:title="Profile"/>
 
 </menu>
