--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -155,6 +155,7 @@
                        android:layout_height="wrap_content">
 
                        <Button
+                           android:id="@+id/view_event"
                            android:text="View"
                            android:textAllCaps="false"
                            android:layout_weight="0.50"
