--- a/app/src/main/res/layout/create_activity.xml
+++ b/app/src/main/res/layout/create_activity.xml
@@ -6,176 +6,257 @@
     tools:context=".fregment.ListFragment">
 
     <LinearLayout
-        android:weightSum="1"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:weightSum="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:weightSum="1">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="Create Activity"
-            android:textColor="@color/colorNavHedder"
-            android:textSize="25dp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:text="Create Activity"
+                    android:textColor="@color/colorNavHedder"
+                    android:textSize="25dp" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/colorNavHedder">
-        </View>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/colorNavHedder"></View>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="20dp"
+                    android:orientation="vertical">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/bt_background"
-            android:gravity="left"
-            android:hint="Activity Name"
-            android:inputType="text"
-            android:textColor="#000"
-            android:textColorHint="#000"
-            android:textSize="13dp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:weightSum="1">
 
-        <LinearLayout
-            android:weightSum="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:orientation="horizontal">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="28dp"
+                            android:layout_gravity="center"
+                            android:layout_weight="0.85"
+                            android:src="@drawable/name" />
 
-        <LinearLayout
-            android:weightSum="1"
-            android:layout_weight="0.5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:layout_weight="0.15"
+                            android:background="@drawable/bt_background"
+                            android:gravity="left"
+                            android:hint="Activity Name"
+                            android:inputType="text"
+                            android:textColor="#000"
+                            android:textColorHint="#000"
+                            android:textSize="13dp" />
 
-            <CheckBox
-                android:layout_weight="0.8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-            <TextView
-                android:layout_weight="0.2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Private Event"
-                android:textColor="#000"
-                />
-        </LinearLayout>
+                    </LinearLayout>
 
-        <LinearLayout
-            android:weightSum="1"
-            android:layout_weight="0.5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="horizontal"
+                        android:weightSum="1">
 
-            <CheckBox
-                android:layout_weight="0.8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-            <TextView
-                android:layout_weight="0.2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Public Event"
-                android:textColor="#000"
-                />
-        </LinearLayout>
-        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.5"
+                            android:orientation="horizontal"
+                            android:weightSum="1">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/bt_background"
-            android:gravity="left"
-            android:hint="Location"
-            android:inputType="textPassword"
-            android:textColor="#000"
-            android:textColorHint="#000"
-            android:textSize="13dp" />
+                            <CheckBox
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.8" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/bt_background"
-            android:gravity="left"
-            android:hint="Time &amp; Date"
-            android:inputType="number"
-            android:textColor="#000"
-            android:textColorHint="#000"
-            android:textSize="13dp" />
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.2"
+                                android:text="Private Event"
+                                android:textColor="#000" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.5"
+                            android:orientation="horizontal"
+                            android:weightSum="1">
+
+                            <CheckBox
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.8" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.2"
+                                android:text="Public Event"
+                                android:textColor="#000" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:weightSum="1">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="28dp"
+                            android:layout_gravity="center"
+                            android:layout_weight="0.85"
+                            android:src="@drawable/location" />
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:layout_weight="0.15"
+                            android:background="@drawable/bt_background"
+                            android:gravity="left"
+                            android:hint="Location"
+                            android:inputType="textPassword"
+                            android:textColor="#000"
+                            android:textColorHint="#000"
+                            android:textSize="13dp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:weightSum="1">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="28dp"
+                            android:layout_gravity="center"
+                            android:layout_weight="0.85"
+                            android:src="@drawable/datetime" />
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:layout_weight="0.15"
+                            android:background="@drawable/bt_background"
+                            android:gravity="left"
+                            android:hint="Time &amp; Date"
+                            android:inputType="number"
+                            android:textColor="#000"
+                            android:textColorHint="#000"
+                            android:textSize="13dp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:weightSum="1">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="28dp"
+                            android:layout_gravity="center"
+                            android:layout_weight="0.85"
+                            android:src="@drawable/actiab" />
+
+                        <EditText
+                            android:id="@+id/text_dialog"
+                            android:layout_width="match_parent"
+                            android:layout_height="100dp"
+                            android:layout_weight="0.15"
+                            android:background="@drawable/bt_background"
+                            android:gravity="start"
+                            android:hint="About Activity"
+                            android:textColor="#ff000000"
+                            android:textColorHint="#000"
+                            android:textSize="13dp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:weightSum="1">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="28dp"
+                            android:layout_gravity="center"
+                            android:layout_weight="0.85"
+                            android:src="@drawable/imag" />
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:layout_weight="0.15"
+                            android:background="@drawable/bt_background"
+                            android:gravity="left"
+                            android:hint="Image"
+                            android:inputType="textPassword"
+                            android:textColor="#000"
+                            android:textColorHint="#000"
+                            android:textSize="13dp" />
+
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/btn_dialog"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/text_dialog"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginLeft="50dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="50dp"
+                        android:background="@drawable/bgcolor"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:text="Create"
+                        android:textAllCaps="false"
+                        android:textColor="#ffffffff" />
 
 
-        <EditText
-            android:background="@drawable/bt_background"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:id="@+id/text_dialog"
-            android:textSize="13dp"
-            android:hint="About Activity"
-            android:textColor="#ff000000"
-            android:textColorHint="#000"
-            android:layout_marginBottom="10dp"
-            android:gravity="start"/>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/bt_background"
-            android:gravity="left"
-            android:hint="Image"
-            android:inputType="textPassword"
-            android:textColor="#000"
-            android:textColorHint="#000"
-            android:textSize="13dp" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Create"
-            android:textAllCaps="false"
-            android:id="@+id/btn_dialog"
-            android:background="@drawable/bgcolor"
-            android:layout_marginRight="50dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_below="@+id/text_dialog"
-            android:layout_centerHorizontal="true"
-            android:textColor="#ffffffff" />
-
-
-    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
