--- a/app/src/main/res/layout/guest_event_screen.xml
+++ b/app/src/main/res/layout/guest_event_screen.xml
@@ -180,15 +180,14 @@
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
-
-                <View
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/colorNavHedder">
-                </View>
-
+            <LinearLayout
+                android:background="#A0AAE2"
+                android:layout_marginTop="15dp"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
                 <LinearLayout
+                    android:background="#A0AAE2"
                     android:gravity="center"
                     android:weightSum="1"
                     android:orientation="horizontal"
@@ -216,14 +215,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
-                <View
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/colorNavHedder">
-                </View>
-
-
+            </LinearLayout>
                 <LinearLayout
                     android:layout_weight="0.10"
                     android:layout_marginTop="15dp"
