--- a/app/src/main/res/layout/create_activity.xml
+++ b/app/src/main/res/layout/create_activity.xml
@@ -21,21 +21,6 @@
                 android:orientation="vertical"
                 android:weightSum="1">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:text="Create Activity"
-                    android:textColor="@color/colorNavHedder"
-                    android:textSize="25dp" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/colorNavHedder"></View>
-
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -233,6 +218,7 @@
                             android:background="@drawable/bt_background"
                             android:gravity="left"
                             android:hint="Image"
+                            android:editable="false"
                             android:inputType="textPassword"
                             android:textColor="#000"
                             android:textColorHint="#000"
