--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -7,6 +7,7 @@
     tools:context=".fregment.ListFragment">
 
    <LinearLayout
+       android:background="#fff"
        android:weightSum="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
@@ -41,7 +42,6 @@
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
-
                android:layout_height="wrap_content">
 
            </android.support.v7.widget.SearchView>
