--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -20,11 +20,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!--<android.support.v7.widget.CardView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_margin="5dp"-->
-                <!--&gt;-->
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                >
 
                 <LinearLayout
                     android:weightSum="1"
@@ -74,7 +74,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
-            <!--</android.support.v7.widget.CardView>-->
+            </android.support.v7.widget.CardView>
 
             <LinearLayout
                 android:layout_margin="10dp"
