--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -34,14 +34,11 @@
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
-               android:layout_margin="10dp"
-               android:background="@drawable/card_bg"
-               >
+               android:layout_margin="10dp">
            <android.support.v7.widget.SearchView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
-
                android:layout_height="wrap_content">
 
            </android.support.v7.widget.SearchView>
