--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -36,13 +36,15 @@
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
-           <android.support.v7.widget.SearchView
+           <SearchView
+               android:queryHint="search here"
+               android:iconifiedByDefault="false"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
 
-           </android.support.v7.widget.SearchView>
+           </SearchView>
                </android.support.v7.widget.CardView>
 
        </LinearLayout>
