--- a/app/src/main/res/layout/guest_event_screen.xml
+++ b/app/src/main/res/layout/guest_event_screen.xml
@@ -205,6 +205,7 @@
                         android:layout_height="wrap_content" />
 
                     <TextView
+                        android:id="@+id/tv_view_comment"
                         android:layout_weight="0.5"
                         android:text="View Comments"
                         android:gravity="right"
@@ -218,7 +219,7 @@
             </LinearLayout>
                 <LinearLayout
                     android:layout_weight="0.10"
-                    android:layout_marginTop="15dp"
+
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -252,7 +253,7 @@
 
                                 <de.hdodenhof.circleimageview.CircleImageView
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
-                                    android:id="@+id/profile_image"
+                                    android:id="@+id/profile_imag1e"
                                     android:layout_width="75dp"
                                     android:layout_height="75dp"
                                     android:src="@drawable/girl"
@@ -267,7 +268,16 @@
                                     android:textColor="#000"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content" />
-
+                                <RatingBar
+                                    style="@style/RatingBar"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:stepSize="1.0"
+                                    android:isIndicator="true"
+                                    android:numStars="5"
+                                    android:layout_gravity="center"
+                                    android:rating="1.0"
+                                    android:progressTint="@color/colorRating" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -310,7 +320,7 @@
                                     <Button
                                         android:text="View"
                                         android:textAllCaps="false"
-                                        android:layout_weight="0.33"
+                                        android:layout_weight="0.50"
                                         android:textColor="#fff"
                                         android:layout_marginRight="5dp"
                                         android:background="@drawable/bgcolor"
@@ -320,18 +330,23 @@
                                     <Button
                                         android:text="Join"
                                         android:textAllCaps="false"
-                                        android:layout_weight="0.33"
+                                        android:layout_weight="0.50"
                                         android:textColor="#fff"
-                                        android:layout_marginRight="5dp"
                                         android:background="@drawable/bgcolor"
                                         android:layout_width="match_parent"
                                         android:layout_height="35dp" />
 
                                 </LinearLayout>
+
                             </LinearLayout>
+
                         </LinearLayout>
+
                     </android.support.v7.widget.CardView>
+
                 </LinearLayout>
+
+
             </LinearLayout>
         </ScrollView>
 
