--- a/app/src/main/res/layout/host_event_screen_fragment.xml
+++ b/app/src/main/res/layout/host_event_screen_fragment.xml
@@ -180,14 +180,12 @@
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
-
-                <View
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/colorNavHedder">
-                </View>
-
+            <LinearLayout
+                android:background="#A0AAE2"
+                android:layout_marginTop="15dp"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
             <LinearLayout
                 android:gravity="center"
                 android:weightSum="1"
@@ -216,13 +214,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
-                <View
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/colorNavHedder">
-                </View>
-
+            </LinearLayout>
 
                 <LinearLayout
                     android:layout_weight="0.10"
@@ -320,6 +312,7 @@
                                         android:textAllCaps="false"
                                         android:layout_weight="0.33"
                                         android:textColor="#fff"
+                                        android:textAlignment="center"
                                         android:layout_marginRight="5dp"
                                         android:background="@drawable/bgcolor"
                                         android:layout_width="match_parent"
@@ -330,6 +323,7 @@
                                         android:textAllCaps="false"
                                         android:layout_weight="0.33"
                                         android:textColor="#fff"
+                                        android:textAlignment="center"
                                         android:layout_marginRight="5dp"
                                         android:background="@drawable/bgcolor"
                                         android:layout_width="match_parent"
