--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,9 +10,9 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:alpha=".20"
+        android:alpha=".40"
         android:scaleType="fitXY"
-        android:src="@drawable/bg_image" />
+        android:src="@drawable/screen" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,21 +29,21 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                android:gravity="center"
-                android:text="@string/title_activity_navigation"
-                android:textColor="#000"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                android:typeface="monospace" />
+            <!--<TextView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginBottom="30dp"-->
+                <!--android:gravity="center"-->
+                <!--android:text="@string/title_activity_navigation"-->
+                <!--android:textColor="#000"-->
+                <!--android:textSize="25dp"-->
+                <!--android:textStyle="bold"-->
+                <!--android:typeface="monospace" />-->
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="SIGN IN"
                 android:textColor="#000"
@@ -52,8 +52,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -73,7 +74,7 @@
 
                     <EditText
                         android:layout_width="match_parent"
-                        android:layout_height="45dp"
+                        android:layout_height="40dp"
                         android:layout_weight="0.15"
                         android:background="@drawable/bt_background"
                         android:gravity="center"
@@ -103,7 +104,7 @@
 
                     <EditText
                         android:layout_width="match_parent"
-                        android:layout_height="45dp"
+                        android:layout_height="40dp"
                         android:layout_weight="0.15"
                         android:background="@drawable/bt_background"
                         android:gravity="center"
@@ -121,6 +122,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="40dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="Forgot Password?"
                 android:textSize="13dp" />
